# ai-ambient-scribe

./: .gitignore  README.md  design.md  dev.sh  execute-plan-v2.md  execute-plan.md  pyproject.toml
data/: .gitignore
docs/: architecture.md  demo.md  eval-report.md
eval/: __init__.py  bakeoff.py  harness.py  models.py  report.py
eval/datasets/: __init__.py  acibench.py  base.py  primock57.py
eval/metrics/: __init__.py  completeness.py  der.py  grounding.py  wer.py
plans/: README.md  phase-0-skeleton.md  phase-1-diarization.md  phase-2-grounding.md  phase-3-eval-harness.md  phase-4-bakeoff.md  phase-5-ui.md  phase-6-demo-docs.md  phase-7-ambient-listening.md
scribe/: __init__.py  composition.py
scribe/api/: app.py  schemas.py
scribe/app/: __init__.py  ambient.py  approval.py  drafts.py  scribe.py
scribe/cli/: main.py
scribe/dialogue/: __init__.py  aligner.py  roles.py
scribe/dialogue/diarizer/: __init__.py  base.py  sherpa_onnx.py
scribe/dialogue/transcriber/: __init__.py  base.py  mlx_whisper.py
scribe/domain/: __init__.py  types.py
scribe/fhir/: __init__.py  exporter.py
scribe/notes/: __init__.py  citations.py  decode.py  prompt.py
scribe/notes/llm/: __init__.py  base.py  ollama.py
scribe/runtime/: __init__.py  audio.py  live_audio.py  model_host.py
scripts/: debug_ambient_ws.py  debug_grounded_note.py  fetch_primock57.py  run_bakeoff_for_report.py  smoke_real_e2e.py
tests/: conftest.py  test_ambient.py  test_api.py  test_bakeoff.py  test_dialogue.py  test_eval.py  test_notes.py  test_skeleton_e2e.py
tests/fakes/: __init__.py  audio.py  dialogue.py  llm.py  llm_grounded.py
web/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
web/.next/: prerender-manifest.json  trace
web/.next/cache/: .rscinfo
web/.next/server/: server-reference-manifest.json  webpack-runtime.js
web/.next/server/app/: page.js  page_client-reference-manifest.js
web/.next/server/vendor-chunks/: @swc.js
web/.next/static/chunks/: app-pages-internals.js  webpack.js
web/.next/static/webpack/: 31c222e89427ec1a.webpack.hot-update.json  (+14 more)
web/.next/types/app/: layout.ts  (+1 more)
web/app/: globals.css  layout.tsx  page.tsx
web/components/: AmbientRecorder.tsx  ApproveButton.tsx  ApproveSection.tsx  AudioUploader.tsx  DraftBanner.tsx  SOAPEditor.tsx  TranscriptPane.tsx
web/lib/: api.ts  liveAudio.ts  types.ts
(+24 files in other folders)
